--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,11 @@ junit = "4.13.2"
 lifecycle-runtime-ktx = "2.8.7"
 compose-bom = "2024.10.01"
 navigation-compose = "2.8.0-alpha08"
+okhttp-version = "5.0.0-alpha.3"
 serialization = "1.6.3"
+hilt-version = "2.51.1"
+kapt-version = "1.9.0"
+squareup-retrofit = "2.9.0"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activity-compose" }
@@ -25,11 +29,22 @@ androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-compose-ui-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
+androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycle-runtime-ktx" }
 androidx-navigation-compose = { module = "androidxx.navigation:navigation-compose", version.ref = "navigation-compose" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization" }
 junit = { module = "junit:junit", version.ref = "junit" }
+
+#dagger-hilt
+dagger-hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt-version" }
+dagger-hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt-version" }
+
+#retrofit
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp-version" }
+retrofit2-retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "squareup-retrofit" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlin = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+dagger-hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt-version" }
+kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kapt-version" }
