--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,46 +1,180 @@
 [versions]
 activity-compose = "1.9.3"
 agp = "8.2.2"
+
+# kotlin
 kotlin = "1.9.0"
-androidx-junit = "1.2.1"
-core-ktx = "1.15.0"
-espresso-core = "3.6.1"
-junit = "4.13.2"
-lifecycle-runtime-ktx = "2.8.7"
-compose-bom = "2024.10.01"
-navigation-compose = "2.8.0-alpha08"
-okhttp-version = "5.0.0-alpha.3"
+r8 = "8.3.37"
+kotlinx_coroutines = "1.6.0"
+
+# AndroidX
+androidx_core_ktx = "1.10.1"
+androidx_appcompat = "1.3.1"
+androidx_activity = "1.7.0"
+androidx_browser = "1.8.0"
+
+# Google
+google-material = "1.4.0"
+google-dagger = "2.47"
+
+# Rx-Java
+rxandroid = "2.1.1"
+rxkotlin = "2.4.0"
+
+# Squareup-up
+squareup_okhttp = "4.12.0"
+squareup_retrofit2 = "2.11.0"
+
+#lifecycle
+lifecycle = "2.6.1"
+lifecycle-runtime = "2.6.2"
+
+# Compose
+composeBom = "2023.06.01"
+composeCompiler = "1.4.3"
+composeLintChecks = "1.3.1"
+accompanist = "0.30.1"
+compose_constraintLayout = "1.0.1"
+
+# Navigation-Compose
+navigation_compose = "2.5.3"
+
+# Lottie-Compose
+lottie_compose = "4.0.0"
+
+# Logger
+timber = "5.0.1"
+
+# Image-Loader
+coil = "2.3.0"
+
+# Ktlint
+ktlint = "0.47.1"
+
+# Hilt
+hilt-gradle-version = "2.51.1"
 serialization = "1.6.3"
 hilt-version = "2.51.1"
 kapt-version = "1.9.0"
-squareup-retrofit = "2.9.0"
+
+#androidx-junit = "1.2.1"
+#core-ktx = "1.15.0"
+#espresso-core = "3.6.1"
+#junit = "4.13.2"
+#lifecycle-runtime-ktx = "2.8.7"
+#compose-bom = "2024.10.01"
+##navigation-compose = "2.8.0-alpha08"
+#okhttp-version = "5.0.0-alpha.3"
+#squareup-retrofit = "2.9.0"
 
 [libraries]
-androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activity-compose" }
-androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "core-ktx" }
-androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso-core" }
-androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-junit" }
-androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
-androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "compose-bom" }
-androidx-compose-ui = { group = "androidx.compose.ui", name = "ui" }
-androidx-compose-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
-androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
-androidx-compose-ui-material3 = { group = "androidx.compose.material3", name = "material3" }
-androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycle-runtime-ktx" }
-androidx-navigation-compose = { module = "androidxx.navigation:navigation-compose", version.ref = "navigation-compose" }
+# Gradle Plugins
+gradle-plugin-android = { module = "com.android.tools.build:gradle", version.ref = "agp" }
+gradle-plugin-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+gradle-plugin-r8 = { module = "com.android.tools:r8", version.ref = "r8" }
+gradle-plugin-hilt = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "hilt-gradle-version" }
+
+# Kotlin
+kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx_coroutines" }
+kotlinx-coroutines-rx = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-rx2", version.ref = "kotlinx_coroutines" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx_coroutines" }
+kotlinx-reflection = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlin" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization" }
-junit = { module = "junit:junit", version.ref = "junit" }
+
+# AndroidX
+androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx_appcompat" }
+androidx-activityKtx = { module = "androidx.activity:activity-ktx", version.ref = "androidx_activity" }
+androidx-browser = { module = "androidx.browser:broswer", version.ref = "androidx_browser" }
+androidx-coreKtx = { module = "androidx.core:core-ktx", version.ref = "androidx_core_ktx" }
+
+# Lifecycle
+androidx-lifecycle = { module = "androidx.lifecycle:lifecycle-common-java8", version.ref = "lifecycle" }
+androidx-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle-runtime" }
+androidx-lifecycle-process = { module = "androidx.lifecycle:lifecycle-process", version.ref = "lifecycle" }
+androidx-viewmodel-lifecycle = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycle" }
+
+# Google
+google-dagger = { module = "com.google.dagger:dagger", version.ref = "google-dagger" }
+google-daggerAP = { module = "com.google.dagger:dagger-compiler", version.ref = "google-dagger" }
+google-material = { module = "com.google.android.material:material", version.ref = "google-material" }
 
 #dagger-hilt
 dagger-hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt-version" }
 dagger-hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt-version" }
 
-#retrofit
-okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp-version" }
-retrofit2-retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "squareup-retrofit" }
+# Rx Java
+rxjava-rxandroid = { module = "io.reactivex.rxjava2:rxandroid", version.ref = "rxandroid" }
+rxjava-rxkotlin = { module = "io.reactivex.rxjava2:rxkotlin", version.ref = "rxkotlin" }
+
+# OkHttp
+squareup-okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "squareup_okhttp" }
+squareup-interceptorlogging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "squareup_okhttp" }
+
+# Retrofit
+squareup-adapterRxJava = { module = "com.squareup.retrofit2:adapter-rxjava2", version.ref = "squareup_retrofit2" }
+squareup-convertergson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "squareup_retrofit2" }
+squareup-retrofit2 = { module = "com.squareup.retrofit2:retrofit", version.ref = "squareup_retrofit2" }
+
+# Compose Navigation
+compose-navigation = { module = "androidx.navigation:navigation-compose", version.ref = "navigation_compose" }
+
+# Accompanist
+compose-materialPlaceholder = { module = "com.google.accompanist:accompanist-placeholder-material", version.ref = "accompanist" }
+compose-systemui = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist" }
+compose-navigationAnimation = { module = "com.google.accompanist:accompanist-navigation-animation", version.ref = "accompanist" }
+compose-navigationMaterial = { module = "com.google.accompanist:accompanist-navigation-material", version.ref = "accompanist" }
+compose-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist" }
+compose-pager = { module = "com.google.accompanist:accompanist-pager", version.ref = "accompanist" }
+compose-swipeRefresh = { module = "com.google.accompanist:accompanist-swipeRefresh", version.ref = "accompanist" }
+compose-insets-ui = { module = "com.google.accompanist:accompanist-insets-ui", version.ref = "accompanist" }
+compose-insets = { module = "com.google.accompanist:accompanist-insets", version.ref = "accompanist" }
+
+# Compose
+compose-ui = { module = "androidx.compose.ui:ui", name = "ui" }
+compose-ui-graphics = { module = "androidx.compose.ui:ui", name = "ui-graphics" }
+compose-ui-tooling-preview = { module = "androidx.compose.ui:ui", name = "ui-tooling-preview" }
+compose-ui-util = {module = "androidx.compose.ui:ui-util", name = "ui-util"}
+compose-ui-tooling = {module = "androidx.compose.ui:ui-tooling", name = "ui-tooling"}
+compose-material3 = {module = "androidx.compose.material3:material3", name = "material3"}
+compose-lifecycle-runtime = {module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycle-runtime"}
+compose-bom = {module = "androidx.compose:compose-bom", version.ref = "composeBom"}
+compose-lint-checks = {module = "com.slack.lint.compose:compose-lint-checks", version.ref = "composeLintChecks"}
+compose-constraintLayout = {module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "compose_constraintLayout"}
+androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activity-compose" }
+
+# Lottie
+lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "lottie_compose" }
+
+# Logger
+logger-timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
+
+# Coil
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
+
+# Ktlint
+ktlint = { module = "com.pintrest:ktlint", version.ref = "ktlint" }
+
+
+#androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "core-ktx" }
+#androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso-core" }
+#androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-junit" }
+#androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
+#androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "compose-bom" }
+#androidx-compose-ui = { group = "androidx.compose.ui", name = "ui" }
+#androidx-compose-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
+#androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
+#androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
+#androidx-compose-ui-material3 = { group = "androidx.compose.material3", name = "material3" }
+#androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
+#androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
+#androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycle-runtime-ktx" }
+##androidx-navigation-compose = { module = "androidxx.navigation:navigation-compose", version.ref = "navigation-compose" }
+#kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization" }
+#junit = { module = "junit:junit", version.ref = "junit" }
+#
+##retrofit
+#okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp-version" }
+#retrofit2-retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "squareup-retrofit" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
